static/css/style.css
html,
body {
  width: 100%;
  margin: 0px;
  padding: 0px;
  font-family: "Open Sans", sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Playfair Display", serif;
  color: #383838;
}

h1 {
  font-size: 3.5rem;
}

h2 {
  font-size: 2.56rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1.25rem;
}

.container {
  width: 95%;
}

/* Flashes */
.flashes h3 {
  line-height: 4;
}

/* Navigation Styling */
.navigation-bar {
  width: 90%;
  margin: 0 auto;
  font-family: "Open Sans";
}

.nav-wrapper {
  padding-left: 30px;
  padding-right: 30px;
}

.logo {
  height: 50px;
}

.view-btn {
  color: 383838;
}

.collapsible-header .btn {
  margin: 5px;
}

/* Homepage */

/* Main Image */

.main-image-row {
    margin-top: 50px;
}
.main-image {
  position: relative;
  text-align: center;
}

#main-image-text {
  position: absolute;
  top: 8px;
  left: 15px;
  margin-left: 20px;
  margin-top: 20px;
  margin-right: 50px;
  background-color: white;
  padding: 10px 20px;
}

#main-image-text h1 {
  margin-bottom: 15px;
  margin-top: 15px;
}

#main-image-text h2 {
  font-size: 2rem;
  margin-top: 0px;
}

/* Side Image */

.homepage-sml-img {
  position: relative;
  text-align: center;
}

.small-image-text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: white;
}

.small-image-text h3 {
  margin: 5px;
  padding: px;
}

#bottom-right-image {
  margin-top: 15px;
}

/* Homepage - About Section */

#about {
  background-color: #eeeeee;
  padding: 50px 30px;
}

#about-section {
  padding: 50px 0px;
}

#about-fresh-meat {
  background-color: #e0e0e0;
  padding: 50px 30px;
}

.about-btn {
  margin-top: 20px;
  margin-bottom: 20px;
}

.recipe-of-month {
  margin-bottom: 70px;
}

.recipe-of-month-image {
    max-height: 600px;
}

.submit-recipe-section {
  padding: 50px 30px;
  background-color: #eeeeee;
  margin-bottom: 50px;
}

footer {
  background-color: #fb9496;
  width: 90%;
  margin: 0 auto;
  font-family: "Open Sans";
}

/* Recipe Page */

.recipes h5 {
  color: white;
}

